# dalia-challenge

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: rust.yml
migrations/2020-02-17-170801_create_events/: up.sql
migrations/2020-02-18-205752_refreshes/: down.sql  up.sql
src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  router.rs  schema.rs  scrape.rs  templates.rs  types.rs
src/assets/: app.js  main.css  manifest.json
src/css/: app.css
templates/: index.html  skel.html
