[package]
authors = ["Ben Lovy <ben@deciduously.com>"]
edition = "2018"
name = "dalia-challenge"
version = "0.1.0"
description = "Aggreagate and display a filterable listing of Berlin cutlural events"
repository = "https://github.com/deciduously/dalia-challenge"
readme = "README.md"
keywords = ["static", "hyper", "askama", "website"]
license = "BSD-3-Clause"

[dependencies]
askama = "0.9"
diesel_migrations = "1.4"
dotenv = "0.15"
flate2 = "1.0"
hyper = "0.13"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = "0.10"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
select = "0.4"
structopt = "0.3"
thiserror = "1.0"
toml = "0.5"
url = "2.1"

[dependencies.diesel]
version = "1.4"
features = ["r2d2", "sqlite"]

[dependencies.tokio]
features = ["full"]
version = "0.2"

[dev-dependencies]
pretty_assertions = "0.6"